image import success

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div> index.html 에서의 image 사용 </div>
     <img id="robot" width="30%">
   </body>
 </html>
